refactor: Refactor PICA record selection for ISBN/ISSN conversion